@@ -351,14 +351,14 @@ description.</p>
 <h2><a class="toc-backref" href="#id50"><span class="sectnum">2.7</span> Literal Blocks</a></h2>
 <p>Literal blocks are indicated with a double-colon (&quot;::&quot;) at the end of
 the preceding paragraph (over there <span class="docutils literal"><span class="pre">--&gt;</span></span>).  They can be indented:</p>
-<pre class="literal-block">if literal_block:
+<pre class="literal-block"><span>if literal_block:
     text = 'is left as-is'
     spaces_and_linebreaks = 'are preserved'
-    markup_processing = None</pre>
+    markup_processing = None</span></pre>
 <p>Or they can be quoted without indentation:</p>
-<pre class="literal-block">&gt;&gt; Great idea!
+<pre class="literal-block"><span>&gt;&gt; Great idea!
 &gt;
-&gt; Why didn't I think of that?</pre>
+&gt; Why didn't I think of that?</span></pre>
 </div>
 <div class="section" id="line-blocks">
 <h2><a class="toc-backref" href="#id51"><span class="sectnum">2.8</span> Line Blocks</a></h2>
@@ -756,15 +756,15 @@ allowed (e.g. inside a directive).</p>
 <p>Another compound statement:</p>
 <div class="compound">
 <p class="compound-first">Compound 2, a literal block:</p>
-<pre class="compound-middle literal-block">Compound 2, literal.</pre>
+<pre class="compound-middle literal-block"><span>Compound 2, literal.</span></pre>
 <p class="compound-last">Compound 2, this is a test.</p>
 </div>
 <div class="compound">
 <p>Compound 3, only consisting of one paragraph.</p>
 </div>
 <div class="compound">
-<pre class="compound-first literal-block">Compound 4.
-This one starts with a literal block.</pre>
+<pre class="compound-first literal-block"><span>Compound 4.
+This one starts with a literal block.</span></pre>
 <p class="compound-last">Compound 4, a paragraph.</p>
 </div>
 <p>Now something <em>really</em> perverted -- a nested compound block.  This is
@@ -809,14 +809,14 @@ paragraph.</p></td>
 </div>
 <div class="section" id="parsed-literal-blocks">
 <h3><a class="toc-backref" href="#id95"><span class="sectnum">2.14.8</span> Parsed Literal Blocks</a></h3>
-<pre class="literal-block">This is a parsed literal block.
+<pre class="literal-block"><span>This is a parsed literal block.
     This line is indented.  The next line is blank.
 
 Inline markup is supported, e.g. <em>emphasis</em>, <strong>strong</strong>, <span class="docutils literal">literal
 text</span>, <sub>sub-</sub> and <sup>super</sup>scripts,
 inline formulas: <math xmlns="http://www.w3.org/1998/Math/MathML">
 <mrow><mi>A</mi><mo>=</mo><mn>2</mn><mi>π</mi><msup><mi>r</mi><mn>2</mn></msup></mrow></math>,
-footnotes <a class="footnote-reference" href="#id8" id="id22">[1]</a>, <span class="target" id="hyperlink-targets">hyperlink targets</span>, and <a class="reference external" href="http://www.python.org/">references</a>.</pre>
+footnotes <a class="footnote-reference" href="#id8" id="id22">[1]</a>, <span class="target" id="hyperlink-targets">hyperlink targets</span>, and <a class="reference external" href="http://www.python.org/">references</a>.</span></pre>
 </div>
 <div class="section" id="code">
 <h3><a class="toc-backref" href="#id96"><span class="sectnum">2.14.9</span> Code</a></h3>
@@ -1046,12 +1046,12 @@ crunchy, now would it?</p></td>
 <li><p>A role with multiple class attributes, styled with raw directives:</p>
 <p>The following works in most browsers but does not validate
 (<span class="docutils literal">&lt;style&gt;</span> is only allowed in the document head):</p>
-<pre class="literal-block">.. raw:: html
+<pre class="literal-block"><span>.. raw:: html
 
   &lt;style type=&quot;text/css&quot;&gt;&lt;!--
    .green {color: green;}
    .sc {font-variant: small-caps;}
-   --&gt;&lt;/style&gt;</pre>
+   --&gt;&lt;/style&gt;</span></pre>
 <p><span class="green sc" xml:lang="en-gb">British colourful text in small-caps</span>.</p>
 </li>
 </ul>
@@ -1066,9 +1066,9 @@ PDF or Postscript formats for vector graphics instead.)</p>
 <p>Rendering behaviour varies, depending on</p>
 <ol class="loweralpha">
 <li><p>The SVG image itself, e.g. fixed-size vs. scaling:</p>
-<pre class="literal-block">width=&quot;280&quot;              viewBox=&quot;0 0 280 27&quot;
+<pre class="literal-block"><span>width=&quot;280&quot;              viewBox=&quot;0 0 280 27&quot;
 height=&quot;27&quot;              width=&quot;100%&quot;
-                         height=&quot;100%&quot;</pre>
+                         height=&quot;100%&quot;</span></pre>
 </li>
 <li><p>The method used to put the image in the document.</p>
 <p>For HTML, there are several alternatives including:</p>
@@ -1235,7 +1235,7 @@ suppress this behaviour with the <a class="reference internal" href="#run-in">ru
 <dd><p>of the field name width is possible with CSS instead
 of the <cite>field-name-limit</cite> configuration setting, for
 example:</p>
-<pre class="literal-block">dl.field-list &gt; dd { margin-left: 6em; }</pre>
+<pre class="literal-block"><span>dl.field-list &gt; dd { margin-left: 6em; }</span></pre>
 </dd>
 </dl>
 <div class="section" id="styling-with-class-arguments">
